Fix white gap

--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ body {
 
 .kitchen-img {
   width: 100%;
-  height: 548px;
+  height: 100%;
   object-fit: cover;
 }
 
